// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Container background-color renders correctly 1`] = `
.c0 {
  background-color: rgba(145,109,67,0.35);
  border-radius: 20px;
  padding: 20px 30px;
  box-shadow: none;
  width: 100%;
  margin-left: auto;
  margin-right: auto;
  min-width: 300px;
}

<div
  className="c0"
/>
`;

exports[`Container border-radius renders correctly 1`] = `
.c0 {
  background-color: rgba(145,109,67,0.35);
  border-radius: 20px;
  padding: 20px 30px;
  box-shadow: none;
  width: 100%;
  margin-left: auto;
  margin-right: auto;
  min-width: 300px;
}

<div
  className="c0"
/>
`;

exports[`Container boxShadow renders correctly 1`] = `
.c0 {
  background-color: rgba(145,109,67,0.35);
  border-radius: 20px;
  padding: 20px 30px;
  box-shadow: 20px;
  width: 100%;
  margin-left: auto;
  margin-right: auto;
  min-width: 300px;
}

<div
  className="c0"
/>
`;

exports[`Container width renders correctly 1`] = `
.c0 {
  background-color: rgba(145,109,67,0.35);
  border-radius: 20px;
  padding: 20px 30px;
  box-shadow: none;
  width: 20px;
  margin-left: auto;
  margin-right: auto;
  min-width: 300px;
}

<div
  className="c0"
  width="20px"
/>
`;
